test/features/errors/runtime/e3004_assertion_failed.spl
# E3004: Assertion Failed

Feature: E3004 - Assertion Failed at Runtime
  As a Simple runtime
  I want to detect failed assertions
  So that invariants are enforced

  Background:
    Given I have the Simple runtime

  Scenario: Simple assertion failure
    When I run:
      '''
      fn test():
        assert(1 + 1 == 3)  # Runtime error: assertion failed
      '''
    Then I should see runtime error E3004
    And the error message should be "assertion failed: {condition}"
    And the label should indicate "assertion failed here"

  Scenario: Assertion with message
    When I run:
      '''
      fn test():
        assert(false, "This should not happen")
      '''
    Then I should see runtime error E3004
    And the note should contain "This should not happen"

  Scenario: Passing assertion
    When I run:
      '''
      fn test():
        assert(1 + 1 == 2)  # OK
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      fn test():
        assert(false)
      '''
    Then I should see runtime error E3004
    And the error message should contain "단언 실패"
